[project]
name = "backend"
version = "0.1.0"
description = "KattPaw backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.6",
    "mcp[cli]>=1.27.0",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "tavily-python>=0.7.23",
    "uvicorn>=0.43.0",
]

[tool.uv]
dev-dependencies = []
